Giraph Change Log

Release 1.2.0 - unreleased
  GIRAPH-978 Giraph-Debugger Test Graphs not working (nishantgandhi99 via edunov)

  GIRAPH-979: Add type of input to 'missing input' error message (majakabiljo)

  GIRAPH-975: In-proc ZooKeeper server with Master process (edunov)

  GIRAPH-977: useMessageSizeEncoding is broken (majakabiljo)

  GIRAPH-976: More command line logging (majakabiljo)
  
  GIRAPH-972: Race condition in checkpointing (edunov)

  GIRAPH-905: Giraph Debugger (netj via edunov)

  GIRAPH-966: Add a way to ignore some thread exceptions (majakabiljo)

  GIRAPH-964: Remove quotes from output partition specification in hive-io (majakabiljo)

  GIRAPH-963: Aggregators may not be initialized properly (edunov via majakabiljo)

  GIRAPH-955: Allow vertex/edge/message value to be configurable (ikabiljo via majakabiljo)

Release 1.1.0 - 2014-11-19
  GIRAPH-961: Internals of MasterLoggingAggregator have been incorrectly removed

  GIRAPH-938: Allow fast working with primitives generically (ikabiljo via pavanka)

  GIRAPH-945: Always use job Configuration to create Configuration (majakabiljo)

  GIRAPH-931: Provide a Strongly Connected Components algorithm (gianluca via majakabiljo)

  GIRAPH-933: Checkpointing improvements (edunov via majakabiljo)

  GIRAPH-943: Perf regression due to netty 4.0.21 (pavanka)

  GIRAPH-935: Loosen modifiers when needed (ikabiljo via majakabiljo)

  GIRAPH-937 - Upgrade Hive I/O to 0.26. (aching)

  GIRAPH-893: Implement preLoad & postSave on workerObservers (pavanka)

  GIRAPH-936: AsyncMessageStoreWrapper threads are not daemonized (edunov via majakabiljo)

  GIRAPH-934: Allow having state in aggregators (ikabiljo via majakabiljo)

  GIRAPH-932: Adding .arcconfig to GIRAPH for Arcanist support (aching)

  GIRAPH-927: Decouple netty server threads from message processing (edunov via pavanka)  

  GIRAPH-924: Fix checkpointing (edunov via majakabiljo)
