@@ -1,6 +1,9 @@
 Giraph Change Log
 
 Release 1.2.0 - unreleased
+
+  GIRAPH-983 Remove checkpoint related error messages from console (edunov)
+
   GIRAPH-978 Giraph-Debugger Test Graphs not working (nishantgandhi99 via edunov)
 
   GIRAPH-979: Add type of input to 'missing input' error message (majakabiljo)
